Work on FarmMachinery Indexing
Fixing liquid templates search for FarmMachinery

--- a/src/OrchardCore/OrchardCore.Application.Cms.Targets/OrchardCore.Application.Cms.Targets.csproj
+++ b/src/OrchardCore/OrchardCore.Application.Cms.Targets/OrchardCore.Application.Cms.Targets.csproj
@@ -12,9 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\OrchardCore.Modules\AffairesExtra.Migration\AffairesExtra.Migration.csproj" />
     <ProjectReference Include="..\..\OrchardCore.Modules\OrchardCore.HealthChecks\OrchardCore.HealthChecks.csproj" />
-    <ProjectReference Include="..\..\OrchardCore.Themes\AffairesExtra\AffairesExtra.csproj" />
     <ProjectReference Include="..\..\OrchardCore\OrchardCore.Infrastructure\OrchardCore.Infrastructure.csproj" />
   </ItemGroup>
 
@@ -104,6 +102,9 @@
     <ProjectReference Include="..\..\OrchardCore.Themes\TheComingSoonTheme\TheComingSoonTheme.csproj" PrivateAssets="none" />
     <ProjectReference Include="..\..\OrchardCore.Themes\TheTheme\TheTheme.csproj" PrivateAssets="none" />
     <ProjectReference Include="..\..\OrchardCore.Themes\TheAdminAE\TheAdminAE.csproj" PrivateAssets="none" />
+    <ProjectReference Include="..\..\OrchardCore.Modules\AffairesExtra.Data\AffairesExtra.Contents.csproj" PrivateAssets="none" />
+    <ProjectReference Include="..\..\OrchardCore.Modules\AffairesExtra.Migration\AffairesExtra.Migration.csproj" PrivateAssets="none" />
+    <ProjectReference Include="..\..\OrchardCore.Themes\AffairesExtra\AffairesExtra.csproj" PrivateAssets="none" />
   </ItemGroup>
 
 </Project>
