--- a/.github/workflows/build-and-pack-dev.yml
+++ b/.github/workflows/build-and-pack-dev.yml
@@ -17,19 +17,19 @@ jobs:
             DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
             DOTNET_CLI_TELEMETRY_OPTOUT: 1
         steps:
+            - uses: actions/checkout@master
             - name: Initialize
               run: |
                 echo .NET Core & dotnet --version & echo.
                 echo NodeJS & node --version & echo.
                 echo NPM & npm version & echo.
-                cd & echo.
                 git config --global core.autocrlf true
             - name: Restore NuGet packages
-              run: dotnet restore OrchardCore.sln
+              run: dotnet restore
             - name: Build solution
-              run: dotnet build OrchardCore.sln -c Release --no-restore
+              run: dotnet build -c Release --no-restore
             - name: Pack solution
-              run: dotnet pack OrchardCore.sln -c Release --no-build
+              run: dotnet pack -c Release --no-build
             - name: Run tests
               run: |
                 dotnet test .\test\OrchardCore.Tests\OrchardCore.Tests.csproj -c Release --no-build
