--- a/.github/workflows/build-and-pack-dev.yml
+++ b/.github/workflows/build-and-pack-dev.yml
@@ -8,6 +8,7 @@ on:
             - '**/*.md'
             - 'mkdocs.yml'
             - 'src/docs/**/*'
+            - '.github/**/*'
 
 jobs:
     ci-pipeline:
