Fixing dotnet nuget push command in the main workflow

--- a/.github/workflows/build-and-pack-dev.yml
+++ b/.github/workflows/build-and-pack-dev.yml
@@ -8,7 +8,6 @@ on:
             - '**/*.md'
             - 'mkdocs.yml'
             - 'src/docs/**/*'
-            - '.github/**/*'
 
 jobs:
     ci-pipeline:
@@ -38,6 +37,4 @@ jobs:
             - name: Package solution
               run: dotnet pack --configuration Release --output build --no-build
             - name: Publish packages
-              env:
-                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              run: dotnet nuget push "build\OrchardCore.1.0.0-rc1.nupkg" --source "https://nuget.pkg.github.com/$GITHUB_REPOSITORY/index.json" --api-key $GITHUB_TOKEN --no-service-endpoint
+              run: dotnet nuget push "build\OrchardCore.1.0.0-rc1.nupkg" --source "https://nuget.pkg.github.com/${{ github.repository }}/index.json" --api-key ${{ secrets.GITHUB_TOKEN }} --no-service-endpoint
